--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,39 @@
-sympy~=1.8
+asttokens==2.4.1
+comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fonttools==4.49.0
+ipykernel==6.29.3
+ipython==8.22.1
+jedi==0.19.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+kiwisolver==1.4.5
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+nest-asyncio==1.6.0
+numpy==1.26.4
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pyzmq==25.1.2
+six==1.16.0
+stack-data==0.6.3
+sympy==1.12
+tornado==6.4
+traitlets==5.14.1
+wcwidth==0.2.13
